--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,7 @@
     <color name="silver">#C0C0C0</color>
     <color name="green">#4CAF50</color>
     <color name="red">#D32F2F</color>
+    <color name="light_green">#95d097</color>
+    <color name="light_red">#edabab</color>
+    <color name="light_white">#d9d9d9</color>
 </resources>
