Bring intent to front of incoming call screen and close button added

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,5 @@
     <color name="light_green">#95d097</color>
     <color name="light_red">#edabab</color>
     <color name="light_white">#d9d9d9</color>
+    <color name="light_orange">#ff9d80</color>
 </resources>
