Timing issue resolved for activity screen

--- a/app/src/main/res/layout/activity_phone_numbers.xml
+++ b/app/src/main/res/layout/activity_phone_numbers.xml
@@ -99,7 +99,7 @@ android:layout_height="wrap_content"
     android:layout_marginRight="25dp"
     android:layout_marginBottom="25dp"
     app:backgroundTint="@color/Accent"
-    app:rippleColor="@android:color/white"
+    app:rippleColor="@color/light_orange"
     app:fabSize="normal"
     android:id="@+id/add"
     android:src="@drawable/ic_add_white_24dp"
