--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,24 @@
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
 <LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="200dp"
+    app:layout_widthPercent="100%"
+    app:layout_heightPercent="35%"
+    android:layout_height="wrap_content"
+    android:layout_width="wrap_content"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:id="@+id/linear"
     android:paddingTop="7dp"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    android:layout_marginTop="150dp">
+    app:layout_marginTopPercent="20%"
+    tools:context=".MainActivity"
+    >
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="0dp"
@@ -73,6 +79,7 @@
         android:id="@+id/button"
         android:layout_alignTop="@+id/call_back"
         android:layout_toEndOf="@+id/call_back"
+        android:layout_toRightOf="@+id/call_back"
         android:background="@drawable/hangup_selector"
         android:layout_margin="5dp"
         android:textColor="@color/Text_Icons"
@@ -96,12 +103,15 @@
 
 
 </LinearLayout>
+
     <ImageView
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="44dp"
+        android:layout_height="44dp"
         android:src="@mipmap/i_close_nobg"
         android:layout_alignParentRight="true"
-        android:layout_marginTop="145dp"
+        app:layout_marginTopPercent="20%"
+        app:layout_marginRightPercent="2%"
         android:id="@+id/close"
-        android:background="@drawable/close_selector"/>
-</RelativeLayout>
+        android:background="@drawable/close_selector"
+        />
+</android.support.percent.PercentRelativeLayout>
